--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,11 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.18'
     compile 'com.android.support:cardview-v7:25.3.1'
-
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
+    compile 'org.jsoup:jsoup:1.10.2'
+    compile 'com.github.chrisbanes:PhotoView:2.0.0'
 }
 repositories {
     mavenCentral()
