--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name=".ui.activity.ArticleDetailActivity"/>
+        <activity android:name=".ui.activity.HistoryDetailActivity"/>
     </application>
 
 </manifest>
