--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,18 @@
 buildscript {
     ext.kotlin_version = '1.1.2-4'
     ext.anko_version = '0.10'
+    ext.realm_version = '3.4.0'
 
     repositories {
         maven { url 'https://maven.google.com' }
+        maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
+
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-alpha3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.realm:realm-gradle-plugin:$realm_version-SNAPSHOT"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,6 +25,7 @@ allprojects {
     repositories {
         maven { url 'https://maven.google.com' }
         maven { url "https://jitpack.io" }
+        maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
         jcenter()
     }
 }
