--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.kcode.gankotlin">
+    package="com.kcode.gankotlin">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".app.App"
         android:allowBackup="true"
@@ -10,18 +10,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activity.ArticleDetailActivity"/>
-        <activity android:name=".ui.activity.HistoryDetailActivity"/>
-        <activity android:name=".ui.activity.PhotoActivity"/>
+        <activity android:name=".ui.activity.ArticleDetailActivity" />
+        <activity android:name=".ui.activity.HistoryDetailActivity" />
+        <activity android:name=".ui.activity.PhotoActivity" />
     </application>
 
 </manifest>
